--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:postgresql://db:5432/work
+spring.datasource.url=jdbc:postgresql://localhost:5432/work
 spring.datasource.username=postgres
 spring.datasource.password=qwertyps4
 spring.datasource.driver-class-name=org.postgresql.Driver
